# british-pip-pip

./: CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md  cmake_uninstall.cmake.in
docs/: quick-start.dox
examples/: CMakeLists.txt  british.cpp
include/bwhazel/: britis.h
include/bwhazel/british/: core.h  pride.h  stdlib.h  types.h
